Added placeholders for the sections not done yet.

--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -45,6 +45,7 @@
 			<zipfileset dir="${basedir}/views" prefix="views" />
 			<zipfileset dir="${basedir}" includes="*.cfc" />
 			<zipfileset dir="${basedir}" includes="*.cfm" />
+			<zipfileset dir="${basedir}" includes="*.ico" />
 		</zip>
 	</target>
 
